--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,13 +1,13 @@
 {
   "CONTRACT_ADDRESS": "0x1de8AeB6794DFF0c76914E4a429a28a44bA056c5",
-  "SCAN_LINK": "https://etherscan.io/address/0x1de8AeB6794DFF0c76914E4a429a28a44bA056c5",
+  "SCAN_LINK": "https://etherscan.io/address/0x5582f4560e5703b39526a2a8c1f00734874ac762",
   "NETWORK": {
     "NAME": "Ethereum",
     "SYMBOL": "ETH",
     "ID": 1
   },
-  "NFT_NAME": "Troglodyte Society",
-  "SYMBOL": "TS",
+  "NFT_NAME": "monkey",
+  "SYMBOL": "MO",
   "MAX_SUPPLY": 10000,
   "WEI_COST": 5000000000000000,
   "DISPLAY_COST": 0.005,
