--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "react-slick-carousel": "^0.14.9",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "swiper": "^7.4.1",
     "web-vitals": "^1.0.1",
